--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 header {
-    background-color: red;
+    background-color: black;
     border-width: 3px;
     border-style: solid;
 }
